1. Added 2 migrations: InitialCreate, InitDatabase 2. Added repository for pets, goods 3. Added swagger for values v2
