# MyWebApi/Controllers/ValuesV2Controller.cs
@@ -4,6 +4,8 @@ using System.Linq;
 using System.Threading.Tasks;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
+using MyWebApi.Db;
+using MyWebApi.Db.Repository;
 using MyWebApi.Models;
 
 namespace MyWebApi.Controllers
@@ -13,27 +15,72 @@ namespace MyWebApi.Controllers
     [Route("api/v{version:apiVersion}/values")]
     [ApiController]
     public class ValuesV2Controller : ControllerBase
-    {        
+    {
+        private readonly IDataRepository<Pet> _petRepository;
+        private readonly IDataRepository<Good> _goodRepository;
+
+        public ValuesV2Controller(IDataRepository<Pet> petRepository, IDataRepository<Good> goodRepository)
+        {
+            _petRepository = petRepository;
+            _goodRepository = goodRepository;
+        }
+
         [HttpGet]
         [Route("retrieveGoods")]
-        public ActionResult<IEnumerable<Good>> RetrieveGoods()
+        public async Task<ActionResult<IEnumerable<Good>>> RetrieveGoods()
         {
-            return new Good[] 
+            try
             {
-                new Good() { Name = "Soccer ball",  Description = "New soccer ball", Price = 111.0m },
-                new Good() { Name = "Foot ball",  Description = "New foot ball", Price = 111.0m },
-            };
+                return Ok(await _goodRepository.GetAllAsync());
+            }
+            catch(Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
         }
 
         [HttpGet]
         [Route("retrievePets")]
-        public ActionResult<IEnumerable<Pets>> RetrievePets()
+        public async Task<ActionResult<IEnumerable<Pet>>> RetrievePets()
         {
-            return new Pets[]
+            try
             {
-                new Pets() { Name = "Cat",  Description = "Cute cat", Price = 111.0m },
-                new Pets() { Name = "Dog",  Description = "Good boy", Price = 111.0m },
-            };
+                return Ok(await _petRepository.GetAllAsync());
+            }
+            catch(Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
+        }
+
+        [HttpGet]
+        [Route("retrievePet")]
+        public async Task<ActionResult<Pet>> RetrievePet(Guid id)
+        {
+            try
+            {
+                return Ok(await _petRepository.GetAsync(id));
+            }
+            catch(Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
+        }
+
+        [HttpPost]
+        [Route("createPet")]
+        public async Task<IActionResult> CreatePet(Pet pet)
+        {
+            try
+            {
+                await _petRepository.AddAsync(pet);
+
+                return Ok();
+            }
+            catch(Exception ex)
+            {
+                return StatusCode(StatusCodes.Status500InternalServerError, ex.Message);
+            }
         }
     }
 }
