# Swagger/ValuesV2.json
@@ -56,6 +56,40 @@
           }
         }
       }
+    },
+    "/api/v2/values/retrievePet": {
+      "get": {
+        "tags": [
+          "ValuesV2"
+        ],
+        "operationId": "ValuesV2_RetrievePet",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Pets"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
